feat: add middleware

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ export DB_USERNAME=
 export DB_PASSWORD=
 export DB_PARAMS=
 export JWT_SECRET=
+export JWT_EXP_SECRET=
 export BCRYPT_SALT=
 export DB_MAX_CONNECTION=
 export DB_MAX_IDLE_CONNECTION=
