--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,7 +2,7 @@ name: Deploy to Amazon ECR and ECS
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
 
 env:
   AWS_REGION: ap-southeast-1
