--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,18 +52,33 @@ jobs:
           # Get the current task definition
           TASK_DEFINITION=$(aws ecs describe-services --cluster ${{ env.ECS_CLUSTER }} --services ${{ env.ECS_SERVICE }} --query 'services[0].taskDefinition' --output text)
 
-          # Get the container name from the task definition
-          CONTAINER_NAME=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION --query 'taskDefinition.containerDefinitions[0].name' --output text)
+          # Get the current task definition JSON
+          TASK_DEFINITION_JSON=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION)
+
+          # Extract container name
+          CONTAINER_NAME=$(echo $TASK_DEFINITION_JSON | jq -r '.taskDefinition.containerDefinitions[0].name')
 
           # Construct the new image URI
           NEW_IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-          # Create a new task definition with the updated image
-          NEW_TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION | \
-          jq --arg NEW_IMAGE "$NEW_IMAGE" --arg CONTAINER_NAME "$CONTAINER_NAME" '.taskDefinition | .containerDefinitions[0].image=$NEW_IMAGE | del(.status,.revision,.taskDefinitionArn)')
+          # Create a new task definition JSON with the updated image
+          NEW_TASK_DEFINITION_JSON=$(echo $TASK_DEFINITION_JSON | jq --arg IMAGE "$NEW_IMAGE" --arg NAME "$CONTAINER_NAME" '
+            .taskDefinition | {
+              family: .family,
+              taskRoleArn: .taskRoleArn,
+              executionRoleArn: .executionRoleArn,
+              networkMode: .networkMode,
+              containerDefinitions: (.containerDefinitions | map(if .name == $NAME then .image = $IMAGE else . end)),
+              requiresCompatibilities: .requiresCompatibilities,
+              cpu: .cpu,
+              memory: .memory
+            }')
+
+          # Write the new task definition JSON to a file
+          echo "$NEW_TASK_DEFINITION_JSON" > new_task_definition.json
 
           # Register the new task definition
-          NEW_TASK_DEFINITION_ARN=$(echo $NEW_TASK_DEFINITION | aws ecs register-task-definition --cli-input-json file:///dev/stdin | jq -r '.taskDefinition.taskDefinitionArn')
+          NEW_TASK_DEFINITION_ARN=$(aws ecs register-task-definition --cli-input-json file://new_task_definition.json | jq -r '.taskDefinition.taskDefinitionArn')
 
           # Update the ECS service to use the new task definition
           aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --task-definition $NEW_TASK_DEFINITION_ARN --force-new-deployment
