fix: order response payload

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -75,6 +75,7 @@ jobs:
               requiresCompatibilities: .requiresCompatibilities,
               cpu: .cpu,
               memory: .memory
+              runtimePlatform: .runtimePlatform
             }')
 
           # Write the new task definition JSON to a file
