--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,7 +74,7 @@ jobs:
               containerDefinitions: (.containerDefinitions | map(if .name == $NAME then .image = $IMAGE else . end)),
               requiresCompatibilities: .requiresCompatibilities,
               cpu: .cpu,
-              memory: .memory
+              memory: .memory,
               runtimePlatform: .runtimePlatform
             }')
 
